# knowledge-hub

./: .gitignore  AGENTS.md  README.md  knowledge-structure.txt  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/instructions/: correction.instructions.md
.github/prompts/: plan.prompt.md  specify.prompt.md  tasks.prompt.md
.github/workflows/: generate-metadata.yml
Proofreading/: .env.template  README.md  __init__.py  adk_runner.py  cli.py  cli_complex.py.bak  cli_service.py  main.py  pyproject.toml  requirements.txt  sample.md  test_cli_simple.py  test_evidence_simple.py  test_integration_e2e.py  test_proofreading_simple.py  test_report_simple.py  test_root_simple.py  test_sample.md
Proofreading/agent/: __init__.py  root_agent.py
Proofreading/agent/sub_agent/: report_agent.py
Proofreading/agents/: agent.py  base_agent.py  claim_extractor.py  evidence_agent.py  evidence_researcher.py  proofreading_agent.py  report_agent.py  root_agent.py  suggestion_generator.py  text_analyzer.py
Proofreading/config/: llm_config.py  mcp_config.py
Proofreading/utils/: file_manager.py  mcp_client.py  progress_tracker.py
agent/: .gitignore  README.md  agents.json  main.py  pyproject.toml  root_agent.py  run.sh  runner.py  test_root_agent.py
agent/config/: agent_config.py
agent/sub_agent/: __init__.py  evidence_agent.py  proofreading_agent.py  report_agent.py
agent/utils/: file_manager.py  models.py
articles/: [conf] TSKaigiをオンラインで視聴してみた.md  [golang] NotionAPIを利用してブログ記事を入稿する.md  [golang] gqlgenとgormでDB操作の依存性注入(DI)を行う.md  [hono] hono-jsxにReactを導入しようとした話.md  [terraform] Terraformで環境構築したらデプロイ失敗した.md  architecture-telling-onclimb.md  github-actions-ecr-onclimb.md  go-build-1-onclimb.md  golang-di_onclimb.md  golang-notion_onclimb.md  hono-jsx_onclimb.md  misstake-sagemaker-onclimb.md  scroll-time-atack-onclimb.md  terraform-deploy_onclimb.md  web-routing-onclimb.md
knowledges/: AWS.md  express.md  go.md  meta.json  scrum.md
scripts/: generate-metadata-enhanced.ts  generate-metadata.ts
src/: cli.ts  index.ts  scanner.ts  types.ts
template/: article.template.md  knowledge.template.md
tests/: metadata-functions.ts  run-all-tests.ts  test-runner.ts
(+70 files in other folders)
