[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Proofreading"
version = "0.1.0"
dependencies = [
    "google-ai-generativelanguage==0.6.10",
    "google-generativeai==0.8.3",
    "python-dotenv==1.0.1",
    "click==8.1.7",
    "mcp==1.1.0",
    "httpx==0.27.2",
    "markdown==3.7",
    "pathspec==0.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
