[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Proofreading"
version = "0.1.0"
dependencies = [
    "google-ai-generativelanguage==0.6.10",
    "google-generativeai==0.8.3",
    "google-adk==1.14.0",
    "python-dotenv==1.0.1",
    "click>=8.1.8",
    "mcp>=1.8.0",
    "httpx>=0.28.1",
    "markdown==3.7",
    "pathspec==0.12.1",
]

requires-python = ">=3.13"

[tool.hatch.build.targets.wheel]
packages = ["."]
